[project]
name = "minusx-backend"
version = "0.1.0"
description = "MinusX Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.122.0",
    "uvicorn>=0.38.0",
    "gunicorn>=22.0.0",
    "sqlalchemy>=2.0.44",
    "python-dotenv>=1.2.1",
    "pydantic>=2.12.4",
    "duckdb>=1.4.2",
    "duckdb-engine>=0.17.0",
    "google-cloud-bigquery>=3.38.0",
    "sqlalchemy-bigquery>=1.16.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "litellm>=1.60.0",
    "openai>=1.66.0",
    "python-multipart>=0.0.21",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "sqlglot>=20.0.0",
    "jupyterlab>=4.5.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

# Note: Singer taps and targets are installed dynamically via TapInstaller
# See backend/connectors/tap_registry.py for list of supported packages

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["connectors", "pipelines", "processors", "tasks"]
